--- a/package.json
+++ b/package.json
@@ -18,9 +18,17 @@
   "homepage": "https://github.com/ahstro/skeleton#readme",
   "devDependencies": {
     "gulp": "^3.9.0",
+    "gulp-util": "^3.0.7",
     "gulp-jade": "^1.1.0",
     "gulp-sass": "^2.0.4",
-    "gulp-babel": "^5.2.1",
-    "gulp-connect": "^2.2.0"
+    "gulp-connect": "^2.2.0",
+    "babelify": "^6.4.0",
+    "watchify": "^3.4.0",
+    "browserify": "^11.2.0",
+    "vinyl-source-stream": "^1.1.0"
+  },
+  "dependencies": {
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0"
   }
 }
